packages/greeter-source-package.dev2.cssa.vmware.com/test/http-proxy-blue.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
name: blue
namespace: dev2
spec:
virtualhost:
  fqdn: greeter-source.run.cssa.tapsme.org
routes:
- conditions:
  - prefix: /
  services:
  - name: greeter-source-package
    port: 8080
