packages/greeter-source-package.dev2.cssa.vmware.com/test/http-proxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: greeter-source-package
  namespace: dev2
spec:
  virtualhost:
    fqdn: greeter-source.run.cssa.tapsme.org
    tls:
      secretName: greeter-source-package
  routes:
  - conditions:
    - prefix: /
    services:
    - name: greeter-source-package-green
      port: 8080
      weight: 20
    - name: greeter-source-package
      port: 8080
      weight: 80
